[package]
name = "provenance"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "=1.14.5"
solana-sdk = "=1.14.5"
spl-token = "=3.5.0"
solana-transaction-status = "=1.14.5"
mpl-token-metadata = "=1.4.3"
borsh = "=0.9.3"

structopt = "=0.3.26"
serde = "=1.0.145"
serde_json = "=1.0.86"
reqwest = "=0.11.12"
asciify = "=0.1.6"
image = "=0.23.14"